swagger docs for film, inventory, store
